--- a/index.html
+++ b/index.html
@@ -5,18 +5,7 @@
 <body>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>v
 
-<div id="rdn-adspot-1099-39330845"></div>
-<script>
-var rdntag = rdntag || {};
-rdntag.cmd = rdntag.cmd || [];
-rdntag.cmd.push(function() {
-  rdntag
-    .defineAd(1099, "rdn-adspot-1099-39330845").setDebug(true);
-  rdntag.display("rdn-adspot-1099-39330845");
-});
-</script>
-
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<img src='https://s-cdn.rmp.rakuten.co.jp/ads/16/94c1931b-43d7-4362-89e1-bea7a3abf232.jpg'></img>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>v
 </body>
 </html>
