--- a/index2.html
+++ b/index2.html
@@ -5,11 +5,12 @@
 <body>
 
 <script type="text/javascript">
-var rdnActivityParams = {
-  code: "12-19",
-};
+  var rdnActivityParams = {
+    code: "46-test",
+    transaction_id: "xxxxx1",
+    revenue: 100001
+  };
 </script>
-<script src="https://s-cdn.rmp.rakuten.co.jp/js/rtg.js" async></script>
-
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/activity.js" async></script>
 </body>
 </html>
