--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 <body>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>v
 
+<div id="rdn-adspot-478-78595274"></div>
+<script>
+var rdntag = rdntag || {};
+rdntag.cmd = rdntag.cmd || [];
+rdntag.cmd.push(function() {
+  rdntag
+    .defineAd("478", "rdn-adspot-478-78595274");
+  rdntag.display("rdn-adspot-478-78595274");
+});
+</script>
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 <img src='https://s-cdn.rmp.rakuten.co.jp/a2a/img/arrow.png'></img>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>v
 </body>
