--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@ rdntag.cmd.push(function() {
 </script>
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 <img src='https://s-cdn.rmp.rakuten.co.jp/a2a/img/arrow.png'></img>
+
+<script type="text/javascript">
+    var rdnActivityParams = {
+    code: "rakuten_ichiba-purchase",
+    keys: [$__V_SHOPID#AD__],
+    transaction_id: "$__V_OID__",
+    revenue: $__V_TOTALAMOUNT__ 
+};
+</script>
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/activity.js" async></script>
+
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>v
 </body>
 </html>
