--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@ rdntag.cmd.push(function() {
 <script type="text/javascript">
     var rdnActivityParams = {
     code: "rakuten_ichiba-purchase",
-    keys: [$__V_SHOPID#AD__],
-    transaction_id: "$__V_OID__",
-    revenue: $__V_TOTALAMOUNT__ 
+    keys: [1],
+    transaction_id: "2",
+    revenue: 100
 };
 </script>
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/activity.js" async></script>
