--- a/index.html
+++ b/index.html
@@ -5,28 +5,17 @@
 <body>
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>v
 
-<div id="rdn-adspot-478-78595274"></div>
+<div id="rdn-adspot-1197-72638959"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("478", "rdn-adspot-478-78595274");
-  rdntag.display("rdn-adspot-478-78595274");
+    .defineAd("1197", "rdn-adspot-1197-72638959");
+  rdntag.display("rdn-adspot-1197-72638959");
 });
 </script>
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
-<img src='https://s-cdn.rmp.rakuten.co.jp/a2a/img/arrow.png'></img>
-
-<script type="text/javascript">
-    var rdnActivityParams = {
-    code: "rakuten_ichiba-purchase",
-    keys: [1],
-    transaction_id: "2",
-    revenue: 100
-};
-</script>
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/activity.js" async></script>
 
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>v
 </body>
