--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("1197", "rdn-adspot-1197-72638959");
+    .defineAd("1197", "rdn-adspot-1197-72638959").setDebug(true);
   rdntag.display("rdn-adspot-1197-72638959");
 });
 </script>
