--- a/index2.html
+++ b/index2.html
@@ -4,13 +4,16 @@
 </head>
 <body>
 
-<script type="text/javascript">
-  var rdnActivityParams = {
-    code: "46-test",
-    transaction_id: "xxxxx1",
-    revenue: 100001
-  };
+<div id="rdn-adspot-111-73279981"></div>
+<script>
+var rdntag = rdntag || {};
+rdntag.cmd = rdntag.cmd || [];
+rdntag.cmd.push(function() {
+  rdntag
+    .defineAd("111", "rdn-adspot-111-73279981");
+  rdntag.display("rdn-adspot-111-73279981");
+});
 </script>
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/activity.js" async></script>
+<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
