--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>v
 
 <div id="rdn-adspot-1197-72638959"></div>
+<div id="rdn-adspot-1197-72638960"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
-  rdntag
-    .defineAd("1197", "rdn-adspot-1197-72638959").setDebug(true);
-  rdntag.display("rdn-adspot-1197-72638959");
+  rdntag.defineAd("1197", "rdn-adspot-1197-72638959").enableSingleRequest().setDebug(true);
+  rdntag.defineAd("1197", "rdn-adspot-1197-72638960").enableSingleRequest().setDebug(true);
+  rdntag.displayWithSingleRequest();
 });
 </script>
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
