--- a/index2.html
+++ b/index2.html
@@ -4,16 +4,17 @@
 </head>
 <body>
 
-<div id="rdn-adspot-111-73279981"></div>
+<div id="rdn-adspot-111-80345853"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("111", "rdn-adspot-111-73279981");
-  rdntag.display("rdn-adspot-111-73279981");
+    .defineAd("111", "rdn-adspot-111-80345853").setDebug(true);
+  rdntag.display("rdn-adspot-111-80345853");
 });
 </script>
+
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
