--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
 
 <div id="rdn-adspot-1197-72638959"></div>
 <div id="rdn-adspot-1197-72638960"></div>
+<div id="rdn-adspot-1197-72638961"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag.defineAd("1197", "rdn-adspot-1197-72638959").enableSingleRequest().setDebug(true);
   rdntag.defineAd("1197", "rdn-adspot-1197-72638960").enableSingleRequest().setDebug(true);
+  rdntag.defineAd("1197", "rdn-adspot-1197-72638961").enableSingleRequest().setDebug(true);
   rdntag.displayWithSingleRequest();
 });
 </script>
