--- a/index3.html
+++ b/index3.html
@@ -11,7 +11,7 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("286", "rdn-adspot-286-11794200");
+    .defineAd("286", "rdn-adspot-286-11794200").setDebug(true);
   rdntag.display("rdn-adspot-286-11794200");
 });
 </script>
