--- a/ad1.html
+++ b/ad1.html
@@ -6,7 +6,7 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("1223", "rdn-adspot-1223-78917805");
+    .defineAd("1223", "rdn-adspot-1223-78917805").setDebug(true);
   rdntag.display("rdn-adspot-1223-78917805");
 });
 </script>
