--- a/ad2.html
+++ b/ad2.html
@@ -6,7 +6,7 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("1224", "rdn-adspot-1224-81848878");
+    .defineAd("1224", "rdn-adspot-1224-81848878").setDebug(true);
   rdntag.display("rdn-adspot-1224-81848878");
 });
 </script>
