--- a/ad3.html
+++ b/ad3.html
@@ -7,7 +7,7 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("1225", "rdn-adspot-1225-43265097");
+    .defineAd("1225", "rdn-adspot-1225-43265097").setDebug(true);
   rdntag.display("rdn-adspot-1225-43265097");
 });
 </script>
