--- a/cv1.html
+++ b/cv1.html
@@ -3,7 +3,8 @@
 
 <script type="text/javascript">
   var rdnActivityParams = {
-    code: "home_life_direct-cpa1"
+    code: "home_life_direct-cpa1",
+    revenue: 1000
   };
 </script>
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/activity.js" async></script>
