--- a/cv2.html
+++ b/cv2.html
@@ -1,6 +1,7 @@
 <script type="text/javascript">
   var rdnActivityParams = {
-    code: "46-cpa1"
+    code: "46-cpa1",
+    revenue: 1200
   };
 </script>
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/activity.js" async></script>
