--- a/deal.html
+++ b/deal.html
@@ -4,7 +4,7 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("1270", "rdn-adspot-1270-15685950");
+    .defineAd("1270", "rdn-adspot-1270-15685950").setDebug(true);
   rdntag.display("rdn-adspot-1270-15685950");
 });
 </script>
