--- a/ad1.html
+++ b/ad1.html
@@ -1,13 +1,13 @@
 <html>
 <body>
-<div id="rdn-adspot-1223-78917805"></div>
+<div id="rdn-adspot-1197-82320889"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("1223", "rdn-adspot-1223-78917805").setDebug(true);
-  rdntag.display("rdn-adspot-1223-78917805");
+    .defineAd("1197", "rdn-adspot-1197-82320889");
+  rdntag.display("rdn-adspot-1197-82320889");
 });
 </script>
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
