--- a/ad1.html
+++ b/ad1.html
@@ -6,7 +6,7 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("1197", "rdn-adspot-1197-82320889");
+    .defineAd("1197", "rdn-adspot-1197-82320889").setDebug(true);
   rdntag.display("rdn-adspot-1197-82320889");
 });
 </script>
