--- a/ad1.html
+++ b/ad1.html
@@ -1,15 +1,17 @@
 <html>
 <body>
-<div id="rdn-adspot-1197-82320889"></div>
+<div id="rdn-adspot-111-72645675"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("1197", "rdn-adspot-1197-82320889").setDebug(true);
-  rdntag.display("rdn-adspot-1197-82320889");
+    .defineAd("111", "rdn-adspot-111-72645675");
+  rdntag.display("rdn-adspot-111-72645675");
 });
 </script>
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+
+
 </body>
 </html>
