--- a/ad1.html
+++ b/ad1.html
@@ -7,7 +7,7 @@ rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
     .defineAd("286", "rdn-adspot-286-37159489");
-  rdntag.display("rdn-adspot-286-37159489");
+  rdntag.display("rdn-adspot-286-37159489").setDebug(true);
 });
 </script>
 <script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
