--- a/ad1.html
+++ b/ad1.html
@@ -6,8 +6,8 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("286", "rdn-adspot-286-37159489");
-  rdntag.display("rdn-adspot-286-37159489").setDebug(true);
+    .defineAd("286", "rdn-adspot-286-37159489").setDebug(true);
+  rdntag.display("rdn-adspot-286-37159489");
 });
 </script>
 <script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
