--- a/ad2.html
+++ b/ad2.html
@@ -1,15 +1,15 @@
 <html>
 <body>
-<div id="rdn-adspot-1224-81848878"></div>
+<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<div id="rdn-adspot-12880-45782152"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("1224", "rdn-adspot-1224-81848878").setDebug(true);
-  rdntag.display("rdn-adspot-1224-81848878");
+    .defineAd("12880", "rdn-adspot-12880-45782152");
+  rdntag.display("rdn-adspot-12880-45782152");
 });
 </script>
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
