--- a/ad2.html
+++ b/ad2.html
@@ -1,15 +1,22 @@
 <html>
 <body>
-<div id="rdn-adspot-478-58659331"></div>
+<!-- Global site tag (gtag.js) - Google Ads: 372408762 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-372408762"></script>
 <script>
-var rdntag = rdntag || {};
-rdntag.cmd = rdntag.cmd || [];
-rdntag.cmd.push(function() {
-  rdntag
-    .defineAd("478", "rdn-adspot-478-58659331");
-  rdntag.display("rdn-adspot-478-58659331");
-});
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-389541691', {conversion_linker: false});
+  gtag('config', 'AW-372408762', {conversion_linker: false});
 </script>
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<script>
+  gtag('event', 'conversion', {
+      'send_to': ['AW-389541691','AW-372408762'],
+      'seg_id': [$__V_SEGMENT_ID#AD__],
+      'aw_remarketing_only': true
+  });
+</script>
+
 </body>
 </html>
