--- a/ad3.html
+++ b/ad3.html
@@ -1,16 +1,52 @@
 <html>
 <body>
+320x100<br/><br/>
 
-<div id="rdn-adspot-1225-43265097"></div>
+<div id="rdn-adspot-2615-42759133"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("1225", "rdn-adspot-1225-43265097").setDebug(true);
-  rdntag.display("rdn-adspot-1225-43265097");
+    .defineAd("2615", "rdn-adspot-2615-42759133");
+  rdntag.display("rdn-adspot-2615-42759133");
 });
 </script>
+<br/><br/>
+---
+<br/><br/>
+320x50<br/><br/>
+
+<div id="rdn-adspot-2614-16731360"></div>
+<script>
+var rdntag = rdntag || {};
+rdntag.cmd = rdntag.cmd || [];
+rdntag.cmd.push(function() {
+  rdntag
+    .defineAd("2614", "rdn-adspot-2614-16731360");
+  rdntag.display("rdn-adspot-2614-16731360");
+});
+</script>
+
+<br/><br/>
+--
+<br/><br/>
+300x250<br/><br/>
+
+<div id="rdn-adspot-478-45224665"></div>
+<script>
+var rdntag = rdntag || {};
+rdntag.cmd = rdntag.cmd || [];
+rdntag.cmd.push(function() {
+  rdntag
+    .defineAd("478", "rdn-adspot-478-45224665");
+  rdntag.display("rdn-adspot-478-45224665");
+});
+</script>
+
+<br/><br/>
+--
+<br/><br/>
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
