--- a/ad3.html
+++ b/ad3.html
@@ -1,5 +1,6 @@
 <html>
 <body>
+recommend only<br/>
 320x100<br/><br/>
 
 <div id="rdn-adspot-2615-42759133"></div>
@@ -47,6 +48,37 @@ rdntag.cmd.push(function() {
 <br/><br/>
 --
 <br/><br/>
+<div id="rdn-adspot-2643-21838998"></div>
+<script>
+var rdntag = rdntag || {};
+rdntag.cmd = rdntag.cmd || [];
+rdntag.cmd.push(function() {
+  rdntag
+    .defineAd("2643", "rdn-adspot-2643-21838998");
+  rdntag.display("rdn-adspot-2643-21838998");
+});
+</script>
+<div id="rdn-adspot-2642-43104907"></div>
+<script>
+var rdntag = rdntag || {};
+rdntag.cmd = rdntag.cmd || [];
+rdntag.cmd.push(function() {
+  rdntag
+    .defineAd("2642", "rdn-adspot-2642-43104907");
+  rdntag.display("rdn-adspot-2642-43104907");
+});
+</script>
+<div id="rdn-adspot-2641-46797796"></div>
+<script>
+var rdntag = rdntag || {};
+rdntag.cmd = rdntag.cmd || [];
+rdntag.cmd.push(function() {
+  rdntag
+    .defineAd("2641", "rdn-adspot-2641-46797796");
+  rdntag.display("rdn-adspot-2641-46797796");
+});
+</script>
+
 <script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
