--- a/ad3.html
+++ b/ad3.html
@@ -54,7 +54,7 @@ var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("2643", "rdn-adspot-2643-21838998");
+    .defineAd("2643", "rdn-adspot-2643-21838998").setDebug(true);
   rdntag.display("rdn-adspot-2643-21838998");
 });
 </script>
