--- a/ad1.html
+++ b/ad1.html
@@ -1,16 +1,44 @@
 <html>
 <body>
-<div id="rdn-adspot-286-37159489"></div>
+
+<script async src="https://s.yimg.jp/images/listing/tool/cv/ytag.js"></script>
 <script>
-var rdntag = rdntag || {};
-rdntag.cmd = rdntag.cmd || [];
-rdntag.cmd.push(function() {
-  rdntag
-    .defineAd("1604", "rdn-adspot-286-37159489").setDebug(true);
-  rdntag.display("rdn-adspot-286-37159489");
+window.yjDataLayer = window.yjDataLayer || [];
+function ytag() { yjDataLayer.push(arguments); }
+
+ 
+
+ytag({
+  "type":"yjad_retargeting",
+  "config":{
+  "yahoo_retargeting_id": "Q1284PRFHJ",
+  "yahoo_retargeting_label": seg1,
+  "yahoo_retargeting_page_type": "home"
+  }
+});
+
+ 
+
+ytag({
+  "type":"yjad_retargeting",
+  "config":{
+  "yahoo_retargeting_id": "Q1284PRFHJ",
+  "yahoo_retargeting_label": seg2,
+  "yahoo_retargeting_page_type": "home"
+  }
+});
+
+ 
+
+ytag({
+  "type":"yjad_retargeting",
+  "config":{
+  "yahoo_retargeting_id": "Q1284PRFHJ",
+  "yahoo_retargeting_label": seg3,
+  "yahoo_retargeting_page_type": "home"
+  }
 });
 </script>
-<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 
 
 </body>
