--- a/ad1.html
+++ b/ad1.html
@@ -12,7 +12,7 @@ ytag({
   "type":"yjad_retargeting",
   "config":{
   "yahoo_retargeting_id": "Q1284PRFHJ",
-  "yahoo_retargeting_label": seg1,
+  "yahoo_retargeting_label": "seg1",
   "yahoo_retargeting_page_type": "home"
   }
 });
@@ -23,7 +23,7 @@ ytag({
   "type":"yjad_retargeting",
   "config":{
   "yahoo_retargeting_id": "Q1284PRFHJ",
-  "yahoo_retargeting_label": seg2,
+  "yahoo_retargeting_label": "seg2",
   "yahoo_retargeting_page_type": "home"
   }
 });
@@ -34,7 +34,7 @@ ytag({
   "type":"yjad_retargeting",
   "config":{
   "yahoo_retargeting_id": "Q1284PRFHJ",
-  "yahoo_retargeting_label": seg3,
+  "yahoo_retargeting_label": "seg3",
   "yahoo_retargeting_page_type": "home"
   }
 });
