--- a/ad1.html
+++ b/ad1.html
@@ -1,14 +1,18 @@
 <html>
 <body>
+1608
 
+<div id="rdn-adspot-286-90995336"></div>
 <script>
-var seg_ids = "111,222,333";
-seg_id = seg_ids.replace('/,/g', '|');
-gtag('event', 'conversion',
-
-{ 'allow_custom_scripts': true, 'u2': seg_id, 'send_to': 'DC-11108333/invmedia/segme0+standard' }
-);
+var rdntag = rdntag || {};
+rdntag.cmd = rdntag.cmd || [];
+rdntag.cmd.push(function() {
+  rdntag
+    .defineAd("1608", "rdn-adspot-286-90995336");
+  rdntag.display("rdn-adspot-286-90995336");
+});
 </script>
+<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 
 
 </body>
