--- a/ad1.html
+++ b/ad1.html
@@ -1,17 +1,17 @@
 <html>
 <body>
-1608
 
-<div id="rdn-adspot-286-90995336"></div>
+<div id="rdn-adspot-15600-94225238"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("15282", "rdn-adspot-286-90995336");
-  rdntag.display("rdn-adspot-286-90995336");
+    .defineAd("15600", "rdn-adspot-15600-94225238");
+  rdntag.display("rdn-adspot-15600-94225238");
 });
 </script>
+
 <script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 
 
