--- a/ad1.html
+++ b/ad1.html
@@ -1,14 +1,13 @@
 <html>
 <body>
-
-<div id="rdn-adspot-1576-96669705"></div>
+<div id="rdn-adspot-320-78106351"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("13655", "rdn-adspot-1576-96669705");
-  rdntag.display("rdn-adspot-1576-96669705");
+    .defineAd("320", "rdn-adspot-320-78106351");
+  rdntag.display("rdn-adspot-320-78106351");
 });
 </script>
 <script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
