--- a/ad1.html
+++ b/ad1.html
@@ -1,15 +1,16 @@
 <html>
 <body>
-<div id="rdn-adspot-320-78106351"></div>
+<div id="rdn-adspot-15600-88574061"></div>
 <script>
 var rdntag = rdntag || {};
 rdntag.cmd = rdntag.cmd || [];
 rdntag.cmd.push(function() {
   rdntag
-    .defineAd("320", "rdn-adspot-320-78106351");
-  rdntag.display("rdn-adspot-320-78106351");
+    .defineAd("15600", "rdn-adspot-15600-88574061");
+  rdntag.display("rdn-adspot-15600-88574061");
 });
 </script>
+
 <script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 
 
