--- a/ad1.html
+++ b/ad1.html
@@ -1,18 +1,63 @@
 <html>
 <body>
-<div id="rdn-adspot-15600-88574061"></div>
-<script>
-var rdntag = rdntag || {};
-rdntag.cmd = rdntag.cmd || [];
-rdntag.cmd.push(function() {
-  rdntag
-    .defineAd("15600", "rdn-adspot-15600-88574061");
-  rdntag.display("rdn-adspot-15600-88574061");
-});
-</script>
 
-<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+  <!--
+---------------------------------------------------------------------------------------------
+# PC
+---------------------------------------------------------------------------------------------
+-->
+2nd Party tag test
+<!--PC  enter -->
+  <script type="text/javascript">
+    grp15_ias_ex_prm = {
+      p: 'adsol_ex',
+      d: 'pc',
+      clid: '109cinemas',
+      cpid: '202012_109cinemas_enter'
+    };
+  </script>
+  <script type="text/javascript" src="//ias.r10s.jp/grp15/ex_common2.js"></script>
+
+<!--PC  thanks -->
+  <script type="text/javascript">
+    grp15_ias_ex_prm = {
+      p: 'adsol_ex',
+      d: 'pc',
+      clid: '109cinemas',
+      cpid: '202012_109cinemas_thanks'
+    };
+  </script>
+  <script type="text/javascript" src="//ias.r10s.jp/grp15/ex_common2.js"></script>
+
+  <!--
+---------------------------------------------------------------------------------------------
+# SP
+---------------------------------------------------------------------------------------------
+-->
+2nd Party tag test
+<!--SP  enter -->  
+  <script type="text/javascript">
+    grp15_ias_ex_prm = {
+      p: 'adsol_ex',
+      d: 'sp',
+      clid: '109cinemas',
+      cpid: '202012_109cinemas_enter'
+    };
+  </script>
+  <script type="text/javascript" src="//ias.r10s.jp/grp15/ex_common2.js"></script>
+
+<!--SP  thanks -->  
+  <script type="text/javascript">
+    grp15_ias_ex_prm = {
+      p: 'adsol_ex',
+      d: 'sp',
+      clid: '109cinemas',
+      cpid: '202012_109cinemas_thanks'
+    };
+  </script>
+  <script type="text/javascript" src="//ias.r10s.jp/grp15/ex_common2.js"></script>
 
 
 </body>
 </html>
+
