--- a/ad1.html
+++ b/ad1.html
@@ -1,17 +1,6 @@
 <html>
 <body>
-<div id="rdn-adspot-24584-95685107"></div>
-<script>
-var rdntag = rdntag || {};
-rdntag.cmd = rdntag.cmd || [];
-rdntag.cmd.push(function() {
-  rdntag
-    .defineAd("24617", "rdn-adspot-24584-95685107");
-    .setRz("A8yCz52zPhc_cOoaZMXM3ugFc83HWmRnytPZIztHBKe9P0o5uPjfhtA1SHnbFNDwKIKIwm8JY4nFusKBG0Y_o9jGYPVS6as4XMXQFLxTry6p_Ee-BV7VhdNtuByjDLDwkzhxFFLBQ_kb45BZOOYHti8~");
-  rdntag.display("rdn-adspot-24584-95685107");
-});
-</script>
-<script src="https://s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
+<script name="sqrpp" src="https://tracker.sqreemtech.com/sqrpp/sqrpp.js"></script>
 </body>
 </html>
 
