--- a/index2.html
+++ b/index2.html
@@ -4,17 +4,15 @@
 </head>
 <body>
 
-<div id="rdn-adspot-111-80345853"></div>
+<script async src="https://dmp.im-apps.net/sdk/im-uid.js"></script>
 <script>
-var rdntag = rdntag || {};
-rdntag.cmd = rdntag.cmd || [];
-rdntag.cmd.push(function() {
-  rdntag
-    .defineAd("111", "rdn-adspot-111-80345853").setDebug(true);
-  rdntag.display("rdn-adspot-111-80345853");
+window.IMUIDRequest = window.IMUIDRequest || [];
+IMUIDRequest.push({
+  customerId: 1000128,
+  callback: function(res) {
+  },
+  callbackTimeout: 2000
 });
 </script>
-
-<script src="https://stg-s-cdn.rmp.rakuten.co.jp/js/aa.js" async></script>
 </body>
 </html>
