--- a/ad1.html
+++ b/ad1.html
@@ -1,6 +1,11 @@
 <html>
 <body>
-<script name="sqrpp" src="https://tracker.sqreemtech.com/sqrpp/sqrpp.js"></script>
+<script src="https://assets.webtag-mcr.mico-cloud.jp/js/mcr.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', function(){
+    mcr.init('c30f7472766d25af1dc80b3ffc9a58c7', false);
+  });
+</script>
 </body>
 </html>
 
